--- a/app/app.less
+++ b/app/app.less
@@ -130,14 +130,15 @@
 }
 
 body {
-    background: #fff;
     font-family: RobotoDraft;
     min-width: @app-min-width;
     padding: 0 !important;
-    overflow-y: hidden;
+//    overflow-y: hidden;
+//    overflow: hidden;
 }
 
 .view-container {
+
     width: 95%;
     height: 100%;
     margin-top: 15px;
@@ -148,7 +149,7 @@ body {
 .view-container-full {
     width: 100%;
     height: 100%;
-    margin: 1px;
+    margin: 5px;
 }
 
 .menu-item {
