--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -1,143 +1,145 @@
 .schedule-block-details {
 
-  textarea {
-    height: 340px;
-    width: 340px;
-    resize: none;
+    textarea {
+        height: 340px;
+        width: 340px;
+        resize: none;
 
-  }
+    }
 }
 
 .btn-trash {
-  font-size: 14px;
-  padding: 4px;
+    font-size: 14px;
+    padding: 4px;
 }
 
 .panel-heading-text-drafts {
-  text-align: center;
-  margin-left: -51px;
-  width: 100%;
-  font-size: 16px;
-}
-
-.gridStyle {
-
-
+    text-align: center;
+    margin-left: -51px;
+    width: 100%;
+    font-size: 16px;
 }
 
 .schedule-script-text-area {
-  width:100%;
-//  height: 100%;
-//  max-height: 450px;
-  border: 0;
-  resize: none;
-  padding: 8px;
+    width: 100%;
+    height: 100%;
+    //  max-height: 450px;
+    border: 0;
+    resize: none;
+    padding: 0px;
 }
 
 .schedule-draft-data-list {
 
-  padding: 0;
-  margin-bottom: 5px;
-  width: 100%;
+    padding: 0;
+    margin-bottom: 5px;
+    width: 100%;
 
-  md-list {
-    height: 450px;
-    overflow: auto;
+    md-list {
+        height: 450px;
+        overflow: auto;
 
-    md-item {
-      cursor: pointer;
-      outline: none;
-    }
-  }
-
-  .schedule-block-id {
-    font-size: 1.25em;
-    margin-left: 8px;
-    font-weight: bold;
-
-  }
-
-  .schedule-draft-item {
-    border-bottom: 1px solid #d3d3d3;
-    height: 45px;
-  }
-
-  .schedule-type-dropdown {
-    margin-right: 5px;
-    width: 150px;
-    border: 0;
-  }
-
-  .schedule-item-input {
-    height: 32px;
-    margin-top: 4px;
-  }
-
-  .schedule-item-input-group {
-    margin-left: 35px;
-  }
-
-  .selected-schedule-row {
-    md-item-content {
-      background-color: #e1f5fe;
+        md-item {
+            cursor: pointer;
+            outline: none;
+        }
     }
 
-  }
+    .schedule-block-id {
+        font-size: 1.25em;
+        margin-left: 8px;
+        font-weight: bold;
+
+    }
+
+    .schedule-draft-item {
+        border-bottom: 1px solid #d3d3d3;
+        height: 45px;
+    }
+
+    .schedule-type-dropdown {
+        margin-right: 5px;
+        width: 150px;
+        border: 0;
+    }
+
+    .schedule-item-input {
+        height: 32px;
+        margin-top: 4px;
+    }
+
+    .schedule-item-input-group {
+        margin-left: 35px;
+    }
+
+    .selected-schedule-row {
+        md-item-content {
+            background-color: #e1f5fe;
+        }
+
+    }
 }
 
 .grid-dropdown {
-  left: 0px;
-  display: block;
-  width: 99%;
-  height: 29px;
-  padding: 4px 10px;
-  background-color: #ffffff;
-  background-image: none;
-  border-radius: 4px;
+    left: 0px;
+    display: block;
+    width: 99%;
+    height: 29px;
+    padding: 4px 10px;
+    background-color: #ffffff;
+    background-image: none;
+    border-radius: 4px;
 }
 
 .datepickerMenu {
-  position: fixed;
-  z-index: 1000;
-//  border: 1px solid darkgrey;
-  border-radius: 4px;
-  background-color: white;
-  margin-top: 5px;
+    position: fixed;
+    z-index: 1000;
+    //  border: 1px solid darkgrey;
+    border-radius: 4px;
+    background-color: white;
+    margin-top: 5px;
 }
 
 .glyphicon {
-  display: inline-block;
-  font-family: FontAwesome;
-  font-style: normal;
-  font-weight: normal;
-  line-height: 1;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    display: inline-block;
+    font-family: FontAwesome;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 1;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 .glyphicon-arrow-left:before {
-  content: @fa-var-angle-left;
+    content: @fa-var-angle-left;
 }
 
 .glyphicon-arrow-right:before {
-  content: @fa-var-angle-right;
+    content: @fa-var-angle-right;
 }
 
 .btn-custom-datetimepicker {
-  .btn;
-  .btn-default;
-  height: 29px;
-  padding: 4px 10px;
-  width: 99%;
-  text-align: left;
-  border-color: #A6A6A6;
+    .btn;
+    .btn-default;
+    height: 29px;
+    padding: 4px 10px;
+    width: 99%;
+    text-align: left;
+    border-color: #A6A6A6;
 
-  .fa {
-    position: absolute;
-    float: right;
-    right: 9px;
-    top: 8px;
-  }
+    .fa {
+        position: absolute;
+        float: right;
+        right: 9px;
+        top: 8px;
+    }
 }
 
+.highlight-script-window-background {
+    background-color: #e1f5fe !important;
+}
+
+.highlight-script-window {
+    background-color: #e1f5fe !important;;
+}
 
