more scheduler improvements

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -89,7 +89,7 @@
 
     .selected-schedule-row {
         md-item-content {
-            background-color: #e1f5fe;
+            background-color: #B3E5FC;
         }
 
     }
@@ -151,15 +151,15 @@
 }
 
 .highlight-script-window-background {
-    background-color: #e1f5fe !important;
+    background-color: #B3E5FC !important;
 }
 
 .highlight-script-window {
-    background-color: #e1f5fe !important;
+    background-color: #B3E5FC !important;
 }
 
 .highlight-script-window-with-box-shadow {
-    background-color: #e1f5fe !important;
+    background-color: #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
 }
 
