--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -23,7 +23,7 @@
 .schedule-script-text-area {
     width: 100%;
     height: 100%;
-    //  max-height: 450px;
+    //  max-height: 375;
     border: 0;
     resize: none;
     padding: 0px;
@@ -36,7 +36,7 @@
     width: 100%;
 
     md-list {
-        height: 450px;
+        height: 375px;
         overflow: auto;
 
         md-item {
@@ -179,5 +179,32 @@
 .highlight-script-window-with-box-shadow {
     background-color: #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
+}
+
+.schedule-block-script-window {
+    padding: 8px;
+    height: 765px;
+    background-color: #ECEFF1;
+}
+
+.schedule-block-list {
+    min-height: 375px;
+    height: 375px;
+    md-list {
+        height: 375px;
+        overflow: auto;
+    }
+}
+
+.schedule-block-completed-list {
+    min-height: 300px;
+    max-height: 300px;
+    height: 300px;
+
+    margin: 8px;
+    md-list {
+        height: 375px;
+        overflow: auto;
+    }
 }
 
