initial commit for dynamic theming, changed default themes to blue-grey, deep-purple, indigo

--- a/app/admin/admin.less
+++ b/app/admin/admin.less
@@ -1,6 +1,7 @@
 .user-list {
     padding-top: 8px;
-    height: 1000px;
+    max-height: 800px;
+    height: 800px;
     overflow: auto;
 
     md-item-content {
