added configure window with dynamic themes

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -241,7 +241,7 @@ ul {
     padding-left: 8px;
     padding-right: 8px;
 
-    md-button {
+    button {
         width: 10em;
         margin-right: 10px;
     }
