--- a/app/widgets/navigation/navigation-widget.less
+++ b/app/widgets/navigation/navigation-widget.less
@@ -1,10 +1,11 @@
 .navigation-buttons {
 
-  md-button {
-    width: 12em;
-    margin-right: 10px;
-    margin-top: 10px;
-    margin-bottom: 10px;
-  }
+    margin: 16px;
 
+    button {
+        width: 12em;
+        margin-right: 10px;
+        margin-top: 10px;
+        margin-bottom: 10px;
+    }
 }
