--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -1,5 +1,8 @@
-.panel-operator-controls {
-    md-button {
+.operator-controls {
+
+    margin: 16px;
+
+    button {
         min-width: 180px;
         margin-left: 8px;
         margin-right: 8px;
