layout fixes for angular-material 0.6

--- a/app/app.less
+++ b/app/app.less
@@ -198,6 +198,11 @@ body {
     }
 }
 
+.menu-item-divider {
+    height: 1px;
+    border: 1px solid #d3d3d3;
+}
+
 md-sidenav {
 
     .menu-item.active {
@@ -229,7 +234,7 @@ md-sidenav {
     z-index: 3;
     span {
         margin-left: 32px;
-        
+
     }
 }
 
@@ -321,3 +326,4 @@ md-sidenav {
 .dashboard-container h1 {
     min-height: 12px;
 }
+
