--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -344,7 +344,28 @@ ul {
     font-size: 16px;
 }
 
+.alarm-badge {
+    position: absolute;
+    right: 60px;
+    color: black;
+    .avoid-clicks;
+}
 
+.alarm-badge-warn {
+    top: 2px;
+    background-color: #ffeb3b;
+}
+
+.alarm-badge-error {
+    top: 20px;
+    background-color: #ffc107;
+}
+
+.alarm-badge-crit {
+    top: 38px;
+    background-color: #e51c23;
+    color: white;
+}
 
 
 
