--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -30,10 +30,9 @@
 }
 
 .schedule-draft-data-list {
-
+    margin-left: 8px;
     padding: 0;
     margin-bottom: 5px;
-    width: 100%;
 
     md-list {
         height: 375px;
@@ -189,6 +188,8 @@
 
 .schedule-block-list {
     margin-top: 4px;
+    margin-left: 8px;
+    margin-right: 0px;
     min-height: 100px;
     height: 375px;
     padding: 0 !important;
@@ -212,13 +213,16 @@
 
 #schedule-horizontal-draft-resizer {
     height: 6px;
+    margin-left: 8px;
+    margin-right: 0px;
     left: 0;
     right: 0;
-    background-color: #f3f3f3;
+    background-color: #dfdfdf;
+//    background: linear-gradient(to bottom, rgba(243,243,243,1) 0%,rgba(243,243,243,1) 50%,rgba(204,204,204,1) 100%);
     cursor: row-resize;
 }
 
 #schedule-horizontal-draft-resizer:hover, #schedule-vertical-draft-resizer:hover {
-    background-color: #d3d3d3;
+    background-color: #c6c6c6;
 }
 
