more uniform toolbar controls layout across pages

--- a/app/admin/admin.less
+++ b/app/admin/admin.less
@@ -21,6 +21,7 @@
 
 .user-editing-buttons {
     max-width: 150px;
+    min-width: 150px;
 }
 
 .deactivated-user {
@@ -32,7 +33,7 @@
 }
 
 .activated-user {
-    background: #E1F5FE;
+//    background: #E1F5FE;
 
     &:hover {
         background: #B3E5FC;
