--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -335,13 +335,12 @@ ul {
         border-bottom: 1px solid lightgrey;
         padding-left: 8px;
         padding-right: 8px;
+        height: 36px;
     }
-
-
 }
 
 .alarms-tools-checkbox {
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .alarm-badge {
