--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -126,7 +126,7 @@
 .datepickerMenu {
     position: fixed;
     z-index: 1000;
-    //  border: 1px solid darkgrey;
+    border: 1px solid #f1f1f1;
     border-radius: 4px;
     background-color: white;
     margin-top: 5px;
