--- a/app/admin/admin.less
+++ b/app/admin/admin.less
@@ -12,9 +12,11 @@
     }
 
     .user-cell {
-        min-width: 400px;
+        min-width: 200px;
         max-width: 400px;
         width: 400px;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
 }
@@ -36,6 +38,6 @@
 //    background: #E1F5FE;
 
     &:hover {
-        background: #B3E5FC;
+        background: #f8f8f8;
     }
 }
