scheduler layout fixes

--- a/app/app.less
+++ b/app/app.less
@@ -236,6 +236,11 @@ md-sidenav {
     max-height: 35px;
 }
 
+.panel-toolbar-medium {
+    min-height: 45px;
+    max-height: 45px;
+}
+
 .centered-content {
     display: flex;
     flex-wrap: wrap;
