--- a/app/login-form/login-form.less
+++ b/app/login-form/login-form.less
@@ -1,9 +1,10 @@
 .login-form {
-  max-width: 800px;
-  margin-top: 10px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 15px;
+    width: 800px;
+    max-width: 800px;
+    margin-top: 10px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 15px;
 }
 
 .long-input {
