make alarms large on mouse over

--- a/app/alarms/alarms.less
+++ b/app/alarms/alarms.less
@@ -43,6 +43,10 @@
         overflow: hidden;
         font-size: 16px;
     }
+
+    .alarm-item {
+        height: 108px;
+    }
 }
 
 .small-alarm {
@@ -81,6 +85,10 @@
         display: block;
         overflow: hidden;
         font-size: 24px;
+    }
+
+    .alarm-item {
+        height: 68px;
     }
 }
 
@@ -261,7 +269,6 @@ ul {
 .alarms-list {
     overflow: auto;
 
-
     .alarms-list-item-content {
         padding: 6px;
     }
@@ -365,6 +372,13 @@ ul {
     top: 38px;
     background-color: #e51c23;
     color: white;
+}
+
+.large-alarms-animate {
+    /* standard transition code */
+    -webkit-transition: 0.2s linear all;
+    transition: 0.2s linear all;
+//    opacity:0;
 }
 
 
