--- a/app/app.less
+++ b/app/app.less
@@ -270,7 +270,7 @@ md-sidenav {
 }
 
 /* After the transition this will be the only class remaining */
-.slideInVertically {
+.slide-in-vertically {
     transition: all 0.25s ease-out;
     max-height: 56px;
     min-height: 56px;
@@ -280,7 +280,7 @@ md-sidenav {
 }
 
 /* Initial state when showing */
-.slideInVertically.ng-hide-remove {
+.slide-in-vertically.ng-hide-remove {
     max-height: 0px;
     min-height: 0px;
     margin-bottom: 0px;
@@ -288,7 +288,7 @@ md-sidenav {
 }
 
 /* Will transition towards this state */
-.slideInVertically.ng-hide-add.ng-hide-add-active {
+.slide-in-vertically.ng-hide-add.ng-hide-add-active {
     max-height: 0px;
     min-height: 0px;
     margin-bottom: 0px;
@@ -296,7 +296,7 @@ md-sidenav {
 }
 
 /* Will transition towards this state */
-.slideInVertically.ng-hide-remove.ng-hide-remove-active {
+.slide-in-vertically.ng-hide-remove.ng-hide-remove-active {
     max-height: 56px;
     min-height: 56px;
     margin-bottom: 16px;
@@ -320,3 +320,12 @@ md-sidenav {
     min-height: 12px;
 }
 
+.add-list-item {
+    width: 100%;
+    height: 100%;
+    transition: all 0.2s ease-out;
+    overflow: visible;
+    position: fixed;
+    z-index: 1000;
+    background: transparent;
+}
