--- a/app/app.less
+++ b/app/app.less
@@ -78,7 +78,9 @@
 
 .toolbar-collapse-button-grey {
     color: transparent;
-    width: 100%;
+    width: 80%;
+    margin-left: auto;
+    margin-right: auto;
     left: 23px;
 
     &:hover {
@@ -323,7 +325,7 @@ md-sidenav {
 .add-list-item {
     width: 100%;
     height: 100%;
-    transition: all 0.2s ease-out;
+    transition: all 0.3s linear;
     overflow: visible;
     position: fixed;
     z-index: 1000;
