--- a/app/operator-control/operator-control.less
+++ b/app/operator-control/operator-control.less
@@ -47,6 +47,11 @@
     }
 }
 
+.receptor-state-div-error {
+    background: #FFC107 !important;
+    color: black;
+}
+
 .receptor-state-list {
     display: flex;
     flex-wrap: wrap;
