--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -243,3 +243,18 @@
 .horizontal-resizer-bar:hover, .vertical-resizer:hover {
     background-color: #c6c6c6;
 }
+
+.scheduler-nav-home-item {
+    margin: 48px;
+    cursor: pointer;
+    height: 320px;
+    width: 320px;
+
+    &:hover {
+        background-color: #F5F5F5;
+    }
+}
+
+.svg-receptor {
+    opacity: 1.0;
+}
