--- a/app/app.less
+++ b/app/app.less
@@ -339,9 +339,59 @@ md-sidenav {
 .add-list-item {
     width: 100%;
     height: 100%;
+    z-index: 0;
     transition: all 0.3s linear;
     overflow: visible;
     position: fixed;
-    z-index: 1000;
     background: transparent;
+}
+
+.overlay-loading-div {
+
+    position: absolute;
+    min-height: 100%;
+    min-width: 100%;
+    background-color: rgba(236,239,241,0.4);
+    z-index: 100;
+    cursor: wait;
+    border: none;
+
+    md-progress-circular {
+        background-color: rgba(236,239,241,1.0);
+        .md-inset {
+            background-color: rgba(236,239,241,1.0);
+        }
+    }
+}
+
+.animate-show-grow {
+//    min-width: 100%;
+//    min-height: 100%;
+//    left: 50%;
+//    top: 30px;
+//    border: none;
+
+//    md-progress-circular {
+//        width: 100%;
+//        height: 100%;
+//    }
+}
+
+.animate-show-grow.ng-hide-add.ng-hide-add-active,
+.animate-show-grow.ng-hide-remove.ng-hide-remove-active {
+//    -webkit-transition: all ease-in 0.2s;
+    transition: all ease-in 0.2s;
+}
+
+.animate-show-grow.ng-hide {
+//    min-width: 38px;
+//    min-height: 38px;
+//    left: 50%;
+//    top: 0px;
+
+
+//    md-progress-circular {
+//        width: 0%;
+//        height: 0%;
+//    }
 }
