--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -30,6 +30,8 @@
 }
 
 .schedule-draft-data-list {
+    z-index: 1;
+    position: relative;
     margin-left: 8px;
     padding: 0;
     margin-bottom: 5px;
@@ -75,7 +77,7 @@
 
     md-item-content {
         border-bottom: 1px solid #d3d3d3;
-        background: white;
+//        background: white;
     }
 }
 
@@ -84,7 +86,7 @@
 
     md-item-content {
         border-bottom: 1px solid #d3d3d3;
-        background: white;
+//        background: white;
     }
 }
 
@@ -202,6 +204,7 @@
 }
 
 .schedule-block-list {
+    position: relative;
     margin-top: 4px !important;
     margin-left: 8px;
     margin-right: 0px !important;
@@ -245,9 +248,10 @@
 }
 
 .scheduler-nav-home-item {
-    margin: 48px;
+    margin: 32px;
     cursor: pointer;
     height: 320px;
+    min-width: 320px;
     width: 320px;
 
     &:hover {
@@ -257,4 +261,40 @@
 
 .svg-receptor {
     opacity: 1.0;
+}
+
+//todo: not working for list items
+.animate-show-grow-list-item {
+    //    min-width: 100%;
+        min-height: 49px;
+    max-height: 49px;
+    //    left: 50%;
+    //    top: 30px;
+    //    border: none;
+
+    //    md-progress-circular {
+    //        width: 100%;
+    //        height: 100%;
+    //    }
+}
+
+.animate-show-grow-list-item.ng-hide-add.ng-hide-add-active,
+.animate-show-grow-list-item.ng-hide-remove.ng-hide-remove-active {
+    //    -webkit-transition: all ease-in 0.2s;
+    transition: all ease-out 0.2s;
+}
+
+.animate-show-grow-list-item.ng-hide {
+    //    min-width: 38px;
+        min-height: 0px;
+    max-height: 0px;
+    overflow: hidden;
+    //    left: 50%;
+    //    top: 0px;
+
+
+    //    md-progress-circular {
+    //        width: 0%;
+    //        height: 0%;
+    //    }
 }
