--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -29,29 +29,32 @@
     padding: 0px;
 }
 
-.schedule-draft-data-list {
+.schedule-list {
     z-index: 1;
     position: relative;
-    margin-left: 8px;
     padding: 0;
     margin-bottom: 5px;
-//    min-height: 300px;
+    margin-left: 8px;
+    //    min-height: 300px;
+    overflow: auto;
+    height: 375px;
 
-    md-list {
-        height: 375px;
-        overflow: auto;
-
-        md-item {
-            cursor: pointer;
-            outline: none;
-
-            input {
-                width: 100%;
-            }
-        }
+    input {
+        width: 100%;
     }
+}
 
+.schedule-draft-data-list {
+    z-index: 0;
+    position: relative;
+    padding: 0;
+    //    min-height: 300px;
+    overflow: auto;
+    background: white;
 
+    input {
+        width: 100%;
+    }
 }
 
 .schedule-block-id-text {
@@ -67,27 +70,24 @@
 }
 
 .schedule-block-name-div {
-    max-width: 200px;
-    min-width: 200px;
-    width: 200px;
+    max-width: 130px;
+    min-width: 130px;
+    width: 130px;
+    cursor: pointer;
 }
 
 .schedule-draft-item {
     height: 48px;
-
-    md-item-content {
-        border-bottom: 1px solid #d3d3d3;
-//        background: white;
-    }
+    padding: 2px;
+    min-width: 800px;
+    direction: ltr;
+    border-bottom: 1px solid #d3d3d3;
+    overflow: hidden;
 }
 
 .schedule-item {
     height: 48px;
-
-    md-item-content {
-        border-bottom: 1px solid #d3d3d3;
-//        background: white;
-    }
+    border-bottom: 1px solid #d3d3d3;
 }
 
 .schedule-type-dropdown {
@@ -106,21 +106,18 @@
 }
 
 .selected-schedule-row {
-    md-item-content {
-        background: #B3E5FC !important;
-    }
+    background: #B3E5FC !important;
+//    border-left: 2px solid transparent;
+//    border-top: 2px solid transparent;
+//    border-bottom: 2px solid transparent;
 }
 
 .schedule-row-executing {
-    md-item-content {
-        background: #66BB6A !important;
-    }
+    background: #66BB6A !important;
 }
 
 .schedule-row-executing-and-selected {
-    md-item-content {
-        background: linear-gradient(to right, rgba(102,187,106,1) 0%,rgba(102,187,106,1) 25%,rgba(179,229,252,0.52) 50%,rgba(179,229,252,0.5) 51%,rgba(179,229,252,1) 75%,rgba(179,229,252,1) 100%)
-    }
+    background: linear-gradient(to right, rgba(102, 187, 106, 1) 0%, rgba(102, 187, 106, 1) 25%, rgba(179, 229, 252, 0.52) 50%, rgba(179, 229, 252, 0.5) 51%, rgba(179, 229, 252, 1) 75%, rgba(179, 229, 252, 1) 100%)
 }
 
 .grid-dropdown {
@@ -189,12 +186,26 @@
 .highlight-script-window-with-box-shadow {
     background-color: #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
+    z-index: 0;
 }
 
 .schedule-block-script-window {
     min-height: 100%;
     padding: 0px;
     background-color: #ECEFF1;
+    height: 600px;
+    overflow: auto;
+
+    textarea {
+        width: 100%;
+        height: 100%;
+        -webkit-box-sizing: border-box;
+        box-sizing: border-box;
+//        background-color: #ECEFF1;
+        padding: 8px;
+        border: none;
+        resize: none;
+    }
 }
 
 .schedule-block-resource-window {
@@ -206,15 +217,12 @@
 .schedule-block-list {
     position: relative;
     margin-top: 4px !important;
-    margin-left: 8px;
     margin-right: 0px !important;
     min-height: 200px;
-//    height: 375px;
+    //    height: 375px;
     padding: 0 !important;
-    md-list {
-        height: 100%;
-        overflow: auto;
-    }
+    height: 100%;
+    overflow: auto;
 }
 
 .schedule-block-completed-list {
@@ -239,7 +247,7 @@
     left: 0;
     right: 0;
     background-color: #dfdfdf;
-//    background: linear-gradient(to bottom, rgba(243,243,243,1) 0%,rgba(243,243,243,1) 50%,rgba(204,204,204,1) 100%);
+    //    background: linear-gradient(to bottom, rgba(243,243,243,1) 0%,rgba(243,243,243,1) 50%,rgba(204,204,204,1) 100%);
     cursor: row-resize;
 }
 
@@ -263,38 +271,36 @@
     opacity: 1.0;
 }
 
-//todo: not working for list items
-.animate-show-grow-list-item {
-    //    min-width: 100%;
-        min-height: 49px;
+.animate-repeat {
+    list-style: none;
+    box-sizing: border-box;
+}
+
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter,
+.animate-repeat.ng-leave {
+    -webkit-transition: all linear 0.275s;
+    transition: all linear 0.275s;
+}
+
+.animate-repeat.ng-leave.ng-leave-active,
+.animate-repeat.ng-move,
+.animate-repeat.ng-enter {
+    opacity: 0;
+    max-height: 0;
+}
+
+.animate-repeat.ng-leave,
+.animate-repeat.ng-move.ng-move-active,
+.animate-repeat.ng-enter.ng-enter-active {
+    opacity: 1;
     max-height: 49px;
-    //    left: 50%;
-    //    top: 30px;
-    //    border: none;
-
-    //    md-progress-circular {
-    //        width: 100%;
-    //        height: 100%;
-    //    }
 }
 
-.animate-show-grow-list-item.ng-hide-add.ng-hide-add-active,
-.animate-show-grow-list-item.ng-hide-remove.ng-hide-remove-active {
-    //    -webkit-transition: all ease-in 0.2s;
-    transition: all ease-out 0.2s;
+.whiteframe-z1-left {
+    box-shadow: -6px 6px 5px 0px rgba(0, 0, 0, 0.26);
 }
 
-.animate-show-grow-list-item.ng-hide {
-    //    min-width: 38px;
-        min-height: 0px;
-    max-height: 0px;
-    overflow: hidden;
-    //    left: 50%;
-    //    top: 0px;
-
-
-    //    md-progress-circular {
-    //        width: 0%;
-    //        height: 0%;
-    //    }
+.invalid-date-error {
+    border: 1px solid #F44336 !important;
 }
