--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -48,7 +48,6 @@
     z-index: 0;
     position: relative;
     padding: 0;
-    //    min-height: 300px;
     overflow: auto;
     background: white;
 
@@ -58,26 +57,47 @@
 }
 
 .schedule-block-id-text {
-    font-size: 1.25em;
+    font-size: 18px;
     font-weight: bold;
-    text-overflow: ellipsis;
+    margin-top: 2px;
+    max-width: 130px;
+    min-width: 130px;
+    width: 130px;
+    vertical-align: middle;
+}
+
+.schedule-block-name-div {
     overflow: hidden;
+    text-overflow: ellipsis;
+    max-width: 160px;
+    min-width: 160px;
+    margin-left: 4px;
+    margin-top: 5px;
+    cursor: pointer;
+
+    i {
+        position: absolute;
+        left: 0;
+        padding: 2px;
+        font-size: 12px;
+        max-width: 100px;
+        overflow: hidden;
+        margin-top: -10px;
+    }
 
     &:hover {
         overflow: visible;
         z-index: 1000;
-    }
-}
 
-.schedule-block-name-div {
-    max-width: 130px;
-    min-width: 130px;
-    width: 130px;
-    cursor: pointer;
+        i {
+            overflow: visible;
+        }
+    }
 }
 
 .schedule-draft-item {
     height: 48px;
+    max-height: 48px;
     padding: 2px;
     min-width: 800px;
     direction: ltr;
@@ -87,6 +107,7 @@
 
 .schedule-item {
     height: 48px;
+    max-height: 48px;
     border-bottom: 1px solid #d3d3d3;
 }
 
@@ -226,18 +247,12 @@
 }
 
 .schedule-block-completed-list {
-    min-height: 300px;
-    max-height: 300px;
-    height: 300px;
-
-    margin-top: 4px;
+    z-index: 1;
+    position: relative;
+    padding: 0;
     margin-left: 8px;
-    margin-right: 0px;
-
-    md-list {
-        height: 375px;
-        overflow: auto;
-    }
+    max-height: 275px;
+    overflow: hidden;
 }
 
 .horizontal-resizer-bar {
@@ -303,4 +318,29 @@
 
 .invalid-date-error {
     border: 1px solid #F44336 !important;
+}
+
+/* After the transition this will be the only class remaining */
+.slide-in-vertically-panel-content {
+    transition: all 0.25s linear;
+    max-height: 275px;
+    overflow: visible;
+}
+
+/* Initial state when showing */
+.slide-in-vertically-panel-content.ng-hide-remove {
+    max-height: 0px;
+    overflow: hidden;
+}
+
+/* Will transition towards this state */
+.slide-in-vertically-panel-content.ng-hide-add.ng-hide-add-active {
+    max-height: 0px;
+    overflow: hidden;
+}
+
+/* Will transition towards this state */
+.slide-in-vertically-panel-content.ng-hide-remove.ng-hide-remove-active {
+    max-height: 275px;
+    overflow: visible;
 }
