--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -48,7 +48,7 @@
     z-index: 0;
     position: relative;
     padding: 0;
-    overflow: auto;
+    overflow: auto !important;
     background: white;
 
     input {
@@ -59,7 +59,7 @@
 .schedule-block-id-text {
     font-size: 18px;
     font-weight: bold;
-    margin-top: 2px;
+    margin-top: -2px;
     max-width: 130px;
     min-width: 130px;
     width: 130px;
@@ -72,7 +72,6 @@
     max-width: 160px;
     min-width: 160px;
     margin-left: 4px;
-    margin-top: 5px;
     cursor: pointer;
 
     i {
@@ -82,7 +81,8 @@
         font-size: 12px;
         max-width: 100px;
         overflow: hidden;
-        margin-top: -10px;
+        margin-top: 18px;
+        margin-left: 5px;
     }
 
     &:hover {
@@ -111,6 +111,31 @@
     border-bottom: 1px solid #d3d3d3;
 }
 
+.schedule-item-description-input {
+    margin-left: 5px;
+    width: 180px;
+    margin-top: 4px;
+    background: transparent;
+    border: 0;
+
+    &:hover {
+        border-bottom: 1px solid #d3d3d3;
+    }
+}
+
+.schedule-item-date-input {
+    margin-left: 5px;
+    margin-top: 4px;
+    width: 140px !important;
+    background: transparent;
+    border: 0;
+    margin-right: 3px;
+
+    &:hover {
+        border-bottom: 1px solid #d3d3d3;
+    }
+}
+
 .schedule-type-dropdown {
     margin-right: 5px;
     width: 150px;
@@ -128,9 +153,9 @@
 
 .selected-schedule-row {
     background: #B3E5FC !important;
-//    border-left: 2px solid transparent;
-//    border-top: 2px solid transparent;
-//    border-bottom: 2px solid transparent;
+    //    border-left: 2px solid transparent;
+    //    border-top: 2px solid transparent;
+    //    border-bottom: 2px solid transparent;
 }
 
 .schedule-row-executing {
@@ -208,6 +233,9 @@
     background-color: #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
     z-index: 0;
+    border-right: 1px solid #d3d3d3 !important;
+    border-bottom: 1px solid #d3d3d3 !important;
+    border-top: 1px solid #d3d3d3 !important;
 }
 
 .schedule-block-script-window {
@@ -222,7 +250,7 @@
         height: 100%;
         -webkit-box-sizing: border-box;
         box-sizing: border-box;
-//        background-color: #ECEFF1;
+        //        background-color: #ECEFF1;
         padding: 8px;
         border: none;
         resize: none;
@@ -251,6 +279,7 @@
     position: relative;
     padding: 0;
     margin-left: 8px;
+    //    margin-bottom: 8px;
     max-height: 275px;
     overflow: hidden;
 }
@@ -294,8 +323,8 @@
 .animate-repeat.ng-move,
 .animate-repeat.ng-enter,
 .animate-repeat.ng-leave {
-    -webkit-transition: all linear 0.275s;
-    transition: all linear 0.275s;
+    -webkit-transition: all linear 2s;
+    transition: all linear 0.2s;
 }
 
 .animate-repeat.ng-leave.ng-leave-active,
@@ -322,7 +351,7 @@
 
 /* After the transition this will be the only class remaining */
 .slide-in-vertically-panel-content {
-    transition: all 0.25s linear;
+    transition: all 0.1s linear;
     max-height: 275px;
     overflow: visible;
 }
@@ -343,4 +372,40 @@
 .slide-in-vertically-panel-content.ng-hide-remove.ng-hide-remove-active {
     max-height: 275px;
     overflow: visible;
+}
+
+.confirm-deletion {
+    top: 13px;
+    left: 14px;
+    position: absolute;
+    opacity: 1;
+    transition: transform 0.2s !important;
+}
+
+.confirm-deletion-question {
+    top: 12px;
+    left: 15px;
+    position: absolute;
+    //    transform: rotate(180deg);
+    transition: transform 0.2s !important;
+}
+
+.confirm-deletion-question.ng-hide {
+    opacity: 1;
+    transform: rotate(-180deg);
+}
+
+.confirm-deletion.ng-hide {
+    opacity: 1;
+    transform: rotate(180deg);
+}
+
+.confirm-deletion-question.ng-hide-add.ng-hide-add-active {
+    opacity: 0;
+    transform: rotate(180deg);
+}
+
+.confirm-deletion.ng-hide-add.ng-hide-add-active {
+    opacity: 0;
+    transform: rotate(180deg);
 }
