--- a/app/app.less
+++ b/app/app.less
@@ -366,6 +366,22 @@ md-sidenav {
     }
 }
 
+md-toast {
+    font-size: 18px !important;
+}
+
+.list-subheader-title {
+    border-bottom: 1px solid #9E9E9E;
+    height: 45px;
+    max-height: 45px;
+    width: 100%;
+
+    h2 {
+        padding: 8px;
+        cursor: pointer;
+    }
+}
+
 .animate-show-grow {
 //    min-width: 100%;
 //    min-height: 100%;
@@ -396,4 +412,11 @@ md-sidenav {
 //        width: 0%;
 //        height: 0%;
 //    }
+}
+
+.dropdown-list-item {
+    cursor: pointer;
+    &:hover {
+        background-color: #F5F5F5;
+    }
 }
