--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -419,3 +419,14 @@
     opacity: 0;
     transform: rotate(180deg);
 }
+
+.refresh-schedule-block-lists-button {
+    bottom: 0;
+    padding: 10px;
+//    pointer-events: none;
+    position: fixed;
+    right: 0;
+    white-space: nowrap;
+    z-index: 21;
+//    will-change: top,left;
+}
