wip - better implementation of row buttons on schedule drafts

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -430,3 +430,19 @@
     z-index: 21;
 //    will-change: top,left;
 }
+
+.sb-row-button {
+    float: right;
+    width: 49px;
+    height: 49px;
+    color: #9E9E9E;
+    border-radius: 25px;
+    background: transparent;
+    border: transparent;
+    font-size: 18px;
+    transition: 0s;
+
+    &:hover {
+        color: #212121;
+    }
+}
