--- a/app/admin/admin.less
+++ b/app/admin/admin.less
@@ -35,6 +35,10 @@
 
 }
 
+.cell-span {
+    border: 1px solid transparent;
+}
+
 .user-editing-buttons {
     max-width: 150px;
     min-width: 150px;
