initial commit for supporting subarrays

--- a/app/app.less
+++ b/app/app.less
@@ -12,6 +12,8 @@
 @import "alarms/alarms";
 @import "widgets/navigation/navigation-widget";
 @import "scheduler/scheduler";
+@import "scheduler/subarrays/subarrays";
+@import "scheduler/sb-drafts/sb-drafts";
 @import "video/video";
 @import "widgets/gantt/gantt-widget";
 @import "health/health";
@@ -473,4 +475,16 @@ md-toast {
     font-weight: normal;
     padding: 0 10px;
     margin: 0;
+}
+
+.search-input-box {
+    font-size: 14px;
+    margin-right: 8px;
+    width: 140px;
+    max-width: 140px;
+    background: transparent;
+    border-bottom: 1px solid #d3d3d3;
+    border-top: 0;
+    border-left: 0;
+    border-right: 0;
 }
