--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -243,9 +243,9 @@
     background-color: #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
     z-index: 0;
-    border-right: 1px solid #d3d3d3 !important;
-    border-bottom: 1px solid #d3d3d3 !important;
-    border-top: 1px solid #d3d3d3 !important;
+//    border-right: 1px solid #d3d3d3 !important;
+//    border-bottom: 1px solid #d3d3d3 !important;
+//    border-top: 1px solid #d3d3d3 !important;
 }
 
 .schedule-block-script-window {
