--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -242,7 +242,7 @@
 .highlight-script-window-with-box-shadow {
     background-color: #B3E5FC !important;
     box-shadow: 0px 2px 40px 0 #000;
-    z-index: 0;
+//    z-index: 0;
 //    border-right: 1px solid #d3d3d3 !important;
 //    border-bottom: 1px solid #d3d3d3 !important;
 //    border-top: 1px solid #d3d3d3 !important;
@@ -314,6 +314,7 @@
     cursor: pointer;
     height: 320px;
     min-width: 320px;
+    max-width: 320px;
     width: 320px;
 
     &:hover {
