initial commit for subarray resources display

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -447,3 +447,18 @@
         color: #212121;
     }
 }
+
+.selected-draft-schedule-row {
+    background: #B3E5FC !important;
+    box-shadow: 1px 2px 10px 0 #393939;
+    border-bottom: 1px solid transparent;
+}
+
+.subarray-item {
+    width: 275px;
+    height: 400px;
+}
+
+.subarray-container {
+    margin-bottom: 16px;
+}
