better subarrays population

--- a/app/app.less
+++ b/app/app.less
@@ -441,6 +441,10 @@ md-toast {
     font-size: 14px;
 }
 
+.subheader-text-no-color {
+    font-size: 14px;
+}
+
 .fade-in {
     transition: all 0.3s;
     opacity: 1;
