--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -456,9 +456,10 @@
 
 .subarray-item {
     width: 275px;
-    height: 400px;
+    height: 300px;
 }
 
 .subarray-container {
     margin-bottom: 16px;
+    min-height: 300px;
 }
