more subarray work

--- a/app/scheduler/scheduler.less
+++ b/app/scheduler/scheduler.less
@@ -322,10 +322,6 @@
     }
 }
 
-.svg-receptor {
-    opacity: 1.0;
-}
-
 .animate-repeat {
     list-style: none;
     box-sizing: border-box;
@@ -462,4 +458,13 @@
 .subarray-container {
     margin-bottom: 16px;
     min-height: 300px;
+}
+
+.svg-subarray, .svg-receptor, {
+    fill: currentColor !important;
+    stroke: currentColor !important;
+}
+
+.svg-receptor-with-opacity {
+    fill: currentColor !important;
 }
